--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="navbar">
         <div class="navbar-left">
             <a href="index.html" class="logo">Elqamar</a>
-            <div class="hamburger-menu" id="hamburgerMenu">&#9776;</div> <a href="index.html" class="logo">Elqamar</a>
+            <div class="hamburger-menu" id="hamburgerMenu">&#9776;</div>
                 <nav id="mainNav"> <ul>
                         <li><a href="index.html">首頁</a></li>
                         <li class="dropdown">
